--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -6,7 +6,7 @@ AM_LDFLAGS =
 
 bin_PROGRAMS = madoka-server
 madoka_server_SOURCES = main.c
-madoka_server_CFLAGS = ${AM_CFLAGS} ${PTHREAD_CFLAGS}
-madoka_server_LDFLAGS = ${AM_LDFLAGS} ${PTHREAD_LDFLAGS}
+madoka_server_CFLAGS = $(AM_CFLAGS) $(GNUTLS_CFLAGS) $(PTHREAD_CFLAGS)
+madoka_server_LDFLAGS = $(AM_LDFLAGS) $(GNUTLS_LIBS) $(PTHREAD_LDFLAGS)
 madoka_server_LDADD = $(LIBLTDL)
 madoka_server_DEPENDENCIES = $(LTDLDEPS)
