--- a/src/Makefile.in
+++ b/src/Makefile.in
@@ -196,6 +196,8 @@ ECHO_T = @ECHO_T@
 EGREP = @EGREP@
 EXEEXT = @EXEEXT@
 FGREP = @FGREP@
+GNUTLS_CFLAGS = @GNUTLS_CFLAGS@
+GNUTLS_LIBS = @GNUTLS_LIBS@
 GREP = @GREP@
 INCLTDL = @INCLTDL@
 INSTALL = @INSTALL@
@@ -239,6 +241,9 @@ PACKAGE_TARNAME = @PACKAGE_TARNAME@
 PACKAGE_URL = @PACKAGE_URL@
 PACKAGE_VERSION = @PACKAGE_VERSION@
 PATH_SEPARATOR = @PATH_SEPARATOR@
+PKG_CONFIG = @PKG_CONFIG@
+PKG_CONFIG_LIBDIR = @PKG_CONFIG_LIBDIR@
+PKG_CONFIG_PATH = @PKG_CONFIG_PATH@
 PTHREAD_CC = @PTHREAD_CC@
 PTHREAD_CFLAGS = @PTHREAD_CFLAGS@
 PTHREAD_LIBS = @PTHREAD_LIBS@
@@ -310,8 +315,8 @@ AM_CPPFLAGS = $(LTDLINCL)
 AM_CFLAGS = -Wall -I$(top_builddir)/modules -I$(top_srcdir)/include -DMADOKA_MODULE_DIR="\"$(moduledir)\""
 AM_LDFLAGS = 
 madoka_server_SOURCES = main.c
-madoka_server_CFLAGS = ${AM_CFLAGS} ${PTHREAD_CFLAGS}
-madoka_server_LDFLAGS = ${AM_LDFLAGS} ${PTHREAD_LDFLAGS}
+madoka_server_CFLAGS = $(AM_CFLAGS) $(GNUTLS_CFLAGS) $(PTHREAD_CFLAGS)
+madoka_server_LDFLAGS = $(AM_LDFLAGS) $(GNUTLS_LIBS) $(PTHREAD_LDFLAGS)
 madoka_server_LDADD = $(LIBLTDL)
 madoka_server_DEPENDENCIES = $(LTDLDEPS)
 all: all-am
