Enable compatibility with BSD systems
Fix source code removing _POSIX_C_SOURCE macro avoiding undefined
types and struct fields.

Define explicit helper program by BSD make incompatilibities with
GNU make extensions.

Signed-off: Joel Peláez Jorge <joelpelaez@gmail.com>

--- a/modules/Makefile.am
+++ b/modules/Makefile.am
@@ -15,4 +15,4 @@ noinst_HEADERS = modules.h
 CLEANFILES = $(noinst_HEADERS)
 
 modules.h:	$(top_builddir)/scripts/gen_module_list
-	$< < $(srcdir)/modules.list > $@
+	$(top_builddir)/scripts/gen_module_list < $(srcdir)/modules.list > $@
